# IoText-rs

./: .gitignore  Cargo.toml  Makefile  README.md  sonar-project.properties
.github/workflows/: check-and-lint.yaml  rust-clippy.yml  test.yaml
assets/: benches.csv
benches/: my_benchmark.rs
src/: builder.rs  lib.rs  main.rs  serde_iotext.rs  tools.rs  validators.rs
tests/: builder_tests.rs  lib_test.rs  lib_tests.rs  tools_tests.rs  validators_tests.rs
