[package]
name = "iotext_rs"
version = "0.1.0"
authors = ["Marcin Bielak <marcin.bieli+IoTextrsgithub@gmail.com>"]
edition = "2021"

[lib]
name = "iotext_rs"
path = "src/lib.rs"

[[bin]]
name = "iotext_rs_main"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.31"
rust_decimal_macros = "1.31"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

