[package]
name = "iotext_rs"
version = "0.3.2"
edition = "2021"
authors = ["Marcin Bielak <marcin.bieli+IoTextrsgithub@gmail.com>"]
description = "RUST implementation of IoText data protocol ."
repository = "https://github.com/bieli/IoText-rs"
homepage = "https://github.com/bieli/IoText-rs"
license = "Apache-2.0"
keywords = ["IoT", "IoText", "data", "protocol"]

[lib]
name = "iotext_rs"
path = "src/lib.rs"

[[bin]]
name = "iotext_rs_main"
path = "src/main.rs"

[dependencies]
rust_decimal = "1.31"
rust_decimal_macros = "1.31"

[dev-dependencies]
criterion = "0.3"
#rand = "0.8.4"

[[bench]]
name = "my_benchmark"
harness = false

