[package]
name = "iotext_rs"
version = "0.4.3"
edition = "2021"
authors = ["Marcin Bielak <marcin.bieli+IoTextrsgithub@gmail.com>"]
description = "RUST implementation of IoText data protocol ."
repository = "https://github.com/bieli/IoText-rs"
homepage = "https://github.com/bieli/IoText-rs"
license = "Apache-2.0"
keywords = ["IoT", "IoText", "data", "protocol"]

[lib]
name = "iotext_rs"
path = "src/lib.rs"

[[bin]]
name = "iotext_rs_main"
path = "src/main.rs"

[dependencies]
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
thiserror = "2"
pretty_assertions = "1.4.1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = "0.5.1"
#cargo-tarpaulin = "0.32.0"
#rand = "0.8.4"

[[bench]]
name = "my_benchmark"
harness = false

